2007-06-20  Isaiah Beerbower <ipaqah@tm.net>
	* English.lproj/MainMenu.gorm: Totally redid the gorm file.
	* *.m: Various small additions.

2007-06-20  Isaiah Beerbower <ipaqah@tm.net>
	* PQSampleController.*: Simplified unnecessarily complex code.
	* English.lproj/MainMenu.nib: Totally redid the nib.

2007-06-19  Isaiah Beerbower <ipaqah@tm.net>
	* PQController.m: Put parentheses around 'assignment used as truth value'.
	* PQSampleController.*: Added -changeSize.
	* English.lproj/MainMenu.nib: Added connection between size slider and sample
	  controller's -changeSize.
	* README: A README.

2007-06-17  Isaiah Beerbower <ipaqah@tm.net>
	* PQFontSampleView.m: Handles changing colors.
	* PQSampleController.m: Handles changing colors.

2007-06-17  Isaiah Beerbower <ipaqah@tm.net>
	* PQFontSampleView.*: Only generates font sample if it needs to.
	* PQSampleController.*: Remembers if fonts need updating or not.

2007-06-16  Isaiah Beerbower <ipaqah@tm.net>
	* PQFontSampleView.*: Added auto resize methods, and changed drawRect: to use
	  them.

2007-06-16  Isaiah Beerbower <ipaqah@tm.net>
	* PQFontSampleView.m: Some small changes.

2007-06-11  Isaiah Beerbower <ipaqah@tm.net>
	* PQFontSampleView.m ([-drawRect:]): Changed almost everything.

2007-06-07  Isaiah Beerbower <ipaqah@tm.net>
	* PQSampleController.m: Added method -updateControls, and call it from
		-awakeFromNib so controls will be updated on startup.

2007-06-07  Isaiah Beerbower <ipaqah@tm.net>
	* PQFontSampleView.*: Font sampling view to replace text view.
	* PQSampleController.m: Changed to use PQFontSampleView instead of a
	  text view.
	* GNUmakefile: Makefile for GNUstep.
	* English.lproj/MainMenu.gorm*: Interface for GNUstep.

2007-05-28  Isaiah Beerbower <ipaqah@tm.net>
	* PQSampleController.m: Implemented -updateSampleText.

2007-05-28  Isaiah Beerbower <ipaqah@tm.net>
	* PQSampleController.*: Replaced -update with -updateFonts, -updateSampleText,
	  & -updateSize.
